--- a/public/index-v2.html
+++ b/public/index-v2.html
@@ -1022,7 +1022,7 @@
             <div class="row py-2">
                <div class="col-md-4 py-2">
                   <div class="blog-post">
-                     <img src="../public/assets-v2/img/blog/blog1.webp" alt="Blog Post Image 1"
+                     <img src="assets-v2/img/users/user-1.jpg" alt="Blog Post Image 1"
                         class="blog-img h-100 w-100  portfolio__item-6 transition-3  swiper-slide-next active">
                      <p class="text-muted">Posted on January 1, 2024</p>
                      <h4 class="mb-3">Blog Post Title 1</h4>
@@ -1033,7 +1033,7 @@
                </div>
                <div class="col-md-4 py-2">
                   <div class="blog-post">
-                     <img src="../public/assets-v2/img/blog/img_2.jpg.webp" alt="Blog Post Image 1"
+                     <img src="assets-v2/img/blog/img_2.jpg.webp" alt="Blog Post Image 1"
                         class="blog-img h-100 w-100 portfolio__item-6 transition-3  swiper-slide-next active">
                      <p class="text-muted">Posted on January 1, 2024</p>
                      <h4 class="mb-3">Blog Post Title 1</h4>
@@ -1044,7 +1044,7 @@
                </div>
                <div class="col-md-4 py-2">
                   <div class="blog-post">
-                     <img src="../public/assets-v2/img/blog/img_3.jpg.webp" alt="Blog Post Image 1"
+                     <img src="assets-v2/img/blog/img_3.jpg.webp" alt="Blog Post Image 1"
                         class="blog-img h-100 w-100 portfolio__item-6 transition-3  swiper-slide-next active">
                      <p class="text-muted">Posted on January 1, 2024</p>
                      <h4 class="mb-3">Blog Post Title 1</h4>
@@ -1057,7 +1057,7 @@
             <div class="row py-2">
                <div class="col-md-4 py-2">
                   <div class="blog-post">
-                     <img src="../public/assets-v2/img/blog/img_4.jpg.webp" alt="Blog Post Image 1"
+                     <img src="assets-v2/img/blog/img_4.jpg.webp" alt="Blog Post Image 1"
                         class="blog-img h-100 w-100 portfolio__item-6 transition-3  swiper-slide-next active">
                      <p class="text-muted">Posted on January 1, 2024</p>
                      <h4 class="mb-3">Blog Post Title 1</h4>
@@ -1069,7 +1069,7 @@
                <div class="col-md-4 py-2">
                   <div class="blog-post">
 
-                     <img src="../public/assets-v2/img/blog/blog1.webp" alt="Blog Post Image 1"
+                     <img src="assets-v2/img/blog/blog1.webp" alt="Blog Post Image 1"
                         class="blog-img h-100 w-100 portfolio__item-6 transition-3  swiper-slide-next active">
                      <p class="text-muted">Posted on January 1, 2024</p>
                      <h4 class="mb-3">Blog Post Title 1</h4>
@@ -1080,7 +1080,7 @@
                </div>
                <div class="col-md-4 py-2">
                   <div class="blog-post">
-                     <img src="../public/assets-v2/img/blog/img_2.jpg.webp" alt="Blog Post Image 1"
+                     <img src="assets-v2/img/blog/img_2.jpg.webp" alt="Blog Post Image 1"
                         class="blog-img h-100 w-100 portfolio__item-6 transition-3  swiper-slide-next active">
                      <p class="text-muted">Posted on January 1, 2024</p>
                      <h4 class="mb-3">Blog Post Title 1</h4>
