update blog page img.

--- a/public/blog.html
+++ b/public/blog.html
@@ -63,7 +63,7 @@
     .back-color {
         background-size: cover;
         background-repeat: no-repeat;
-        background-image: url(../public/assets-v2/img/blog/thumb_hero-bg.jpg) !important;
+        background-image: url(assets-v2/img/blog/thumb_hero-bg.jpg) !important;
     }
     @media screen and (max-width: 800px) {
 
@@ -249,7 +249,7 @@
 
                 <div class="col-md-6">
                     <div style="height:300px;"><img height="100%" width="100%"
-                            src="../public/assets-v2/img/blog/blog1.jpg"></div>
+                            src="assets-v2/img/blog/blog1.jpg"></div>
                 </div>
             </div>
             </div>
@@ -387,7 +387,7 @@
                 <div class="row py-2">
                     <div class="col-md-4">
                         <div class="blog-post">
-                            <img src="../public/assets-v2/img/blog/blog1.webp" alt="Blog Post Image 1"
+                            <img src="assets-v2/img/blog/blog1.webp" alt="Blog Post Image 1"
                                 class="blog-img h-100 w-100  portfolio__item-6 transition-3  swiper-slide-next active">
                             <p class="text-muted my-1">Posted on January 1, 2024</p>
                             <h4 class="mb-3">Blog Post Title 1</h4>
@@ -398,7 +398,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="blog-post">
-                            <img src="../public/assets-v2/img/blog/img_2.jpg.webp" alt="Blog Post Image 1"
+                            <img src="assets-v2/img/blog/img_2.jpg.webp" alt="Blog Post Image 1"
                                 class="blog-img h-100 w-100 portfolio__item-6 transition-3  swiper-slide-next active">
                             <p class="text-muted my-1">Posted on January 1, 2024</p>
                             <h4 class="mb-3">Blog Post Title 1</h4>
@@ -409,7 +409,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="blog-post">
-                            <img src="../public/assets-v2/img/blog/img_3.jpg.webp" alt="Blog Post Image 1"
+                            <img src="assets-v2/img/blog/img_3.jpg.webp" alt="Blog Post Image 1"
                                 class="blog-img h-100 w-100 portfolio__item-6 transition-3  swiper-slide-next active">
                             <p class="text-muted my-1">Posted on January 1, 2024</p>
                             <h4 class="mb-3">Blog Post Title 1</h4>
