--- a/public/index-v2.html
+++ b/public/index-v2.html
@@ -1022,7 +1022,7 @@
             <div class="row py-2">
                <div class="col-md-4 py-2">
                   <div class="blog-post">
-                     <img src="assets-v2/img/users/user-1.jpg" alt="Blog Post Image 1"
+                     <img src="assets-v2/img/blog/blog1.webp" alt="Blog Post Image 1"
                         class="blog-img h-100 w-100  portfolio__item-6 transition-3  swiper-slide-next active">
                      <p class="text-muted">Posted on January 1, 2024</p>
                      <h4 class="mb-3">Blog Post Title 1</h4>
